# RLScara

./: README.html  README.md  pyproject.toml
3D models/scara2/: Part1.SLDPRT  Part2.SLDPRT  assembly.SLDASM  base.SLDPRT  link1.SLDPRT  link2.SLDPRT  ~$base.SLDPRT
3D models/scara2/stls/: base.STL  link1.STL
arduino/arm_sketchs/control-sketch/: control-sketch.ino
arduinoCode/sketch_dec03a/: sketch_dec03a.ino
codes/: env.py  main.py  params.data-00000-of-00001  params.index  serialutils.py  train.py
codes/urdfs/urdf/: assembly.SLDASM.urdf
docs/: arduino_utils.html  arm_controller.html  arm_env.html  index.html  main.html  math_utils.html  search.js
final_code/: arduino_utils.py  arm_controller.py  arm_env.py  arm_env_back.py  env.py  main.py  math_utils.py  params.data-00000-of-00001  params.index  plot_utils.py  pyproject.toml  urdfloader.py
final_code/urdfs/launch/: gazebo.launch
final_code/urdfs/meshes/: link2.STL
final_code/urdfs/urdf/: assembly.SLDASM.csv
py/: arduino_utils.py  arm_controller.py  arm_env.py  arm_rl_model.py  color_utils.py  main.py  params.data-00000-of-00001  params.index  plot_utils.py  pyproject.toml  requirements.txt
py/armrl/: main.py  pyproject.toml
py/armrl/armrl/core/: __init__.py  arm_controller.py
py/armrl/armrl/rl/: arm_env.py  arm_env2.py
py/armrl/armrl/utils/: __init__.py  serial_utils.py
py/docs/: arm_controller.html  arm_rl_model.html  color_utils.html  index.html  plot_utils.html  search.js
py/scripts/: main.py  params.index  serialutils.py  train.py  urdfloader.py
py/urdfs/: CMakeLists.txt
(+14 files in other folders)
