[tool.poetry]
name = "rl-project"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz  <henryruiz22@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
gym = "0.23"
tf-agents = "^0.14.0"
tensorflow = "^2.11.0"
pyglet = "1.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
